# cumulus

./: CLAUDE.md  README.md  index.html  package.json  vite.config.ts
scripts/: make-icon.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: awscli.rs  commands.rs  lib.rs  main.rs  models.rs
src/components/: Sidebar.tsx  ui.tsx
src/lib/: api.ts  demo.ts  format.ts  icons.tsx  types.ts
src/views/: Alarms.tsx  Database.tsx  Ecs.tsx  Lambda.tsx  Logs.tsx  Overview.tsx  Settings.tsx  Storage.tsx
