[package]
name = "cumulus"
version = "1.0.0"
description = "Cumulus — a native AWS control room"
authors = ["Cumulus"]
edition = "2021"

[lib]
name = "cumulus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
anyhow = "1"
window-vibrancy = "0.5"
parking_lot = "0.12"

[features]
custom-protocol = ["tauri/custom-protocol"]
